aligning fixes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -759,6 +759,15 @@ footer a {
   visibility: hidden;
   opacity: 0;
 }
+.center {
+  text-align: center;
+}
+.left {
+  text-align: left;
+}
+.right {
+  text-align: right;
+}
 .popup {
   position: fixed;
   display: flex;
